--- a/SuperPaginaWeb/SuperEstilos.css
+++ b/SuperPaginaWeb/SuperEstilos.css
@@ -1,7 +1,7 @@
 .container-fluid{
   text-align: center;
 background-color: #222831;
-color: #00fff5;
+color: #00adb5;
 }
 #Text{
   color: #00fff5;
