--- a/SuperPaginaWeb/SuperEstilos.css
+++ b/SuperPaginaWeb/SuperEstilos.css
@@ -74,6 +74,18 @@ color: #00adb5;
     font-style:oblique;
   }
 }
+.carousel-caption{
+				position: absolute;
+				right: 0;
+				bottom: 0;
+				left: 0;
+				z-index: 10;
+				padding-top: 20px;
+				padding-bottom: 20px;
+				color: #fff;
+				text-align: center;
+				background: rgba(0,0,0,0.4);
+}
 @media only screen and (min-width:1024px){
   #Inicio{
     font-size: 130px;
